# AI_AGENT

./: PROMPT_V1.md  bot.py  chatbot_crew.py  env.py  main.py  my_first_flow.py  pyproject.toml  tdd.py
1-1CHATBOT_AGENT/: .gitignore  README.md  chatbot_crew.py  chatbot_crew_v1.py  db.py  main.py  tools.py
1-1CHATBOT_AGENT/config_del_for_py/: agents.yaml
NEWS_AGENT/: news_crew.py
NEWS_AGENT/output/: edited_articles.json  final_news_report.txt  global_news.json  korean_news.json
content_agent/: AI 로보틱스_20251227163608.md  main.py  pyproject.toml  tools.py
creator_agent/: .gitignore  env.py  pyproject.toml
creator_agent/shorts_creator/: agent.py  prompt.py
invest_agent/: crewai_flow.html  env.py  main.py  pyproject.toml  tools.py
invest_agent/output/: analyze_tech_trends.json  evaluate_growth_potential.json  synthesize_portfolio.json
lang_tutor_agent/: env.py  main.py  pyproject.toml  tools.py  tutor_crew.py  tutor_crew_v1.py  utils.py
lang_tutor_agent/.chroma/esl_topics/: chroma.sqlite3
mcp_a2a_agent/: .gitignore  env.py  start_image_mcp.py  start_lina_agent.py
mcp_a2a_agent/a2a_agent/: agent.py
mcp_a2a_agent/image_editor_agent_with_mcp/: agent.py
mcp_a2a_agent/image_mcp/: server.py  tools.py
mcp_a2a_agent/lina/: agent.py
mcp_a2a_agent/notion_agent_with_mcp/: agent.py  prompt.py
mental_agent/: .flake8  adk_chat.py  env.py  main.py  pyproject.toml  sessions.db
mental_agent/lina/: agent.py  prompt.py
output/: edited_articles.json  final_news_report.txt  global_news.json  korean_news.json
(+11 files in other folders)
